@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuite name="test_errorfail_output" errors="1" failures="1" tests="1" time="0.0051368" hostname="unknown" timestamp="2015-01-07T21:25:14">
+<testsuite name="test_errorfail_output" errors="1" failures="1" tests="1" time="0.0060943" hostname="unknown" timestamp="2015-01-07T21:36:09">
   <properties/>
   <testcase classname="test_errorfail_output" name="test_success">
     <error>
