@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuite name="test_failure_output" errors="1" failures="20" tests="21" time="0.11337" hostname="unknown" timestamp="2015-01-07T21:25:14">
+<testsuite name="test_failure_output" errors="1" failures="20" tests="21" time="0.12117" hostname="unknown" timestamp="2015-01-07T21:36:09">
   <properties/>
   <testcase classname="test_failure_output" name="test_empty">
     <failure>
@@ -105,9 +105,7 @@ In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_ou
   </testcase>
   <testcase classname="test_failure_output" name="test_not_equals">
     <failure>
-Data not equal:
-  Expected : 3
-  Actual   : 3
+Expected and actual are equal.
 In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 103.
     </failure>
   </testcase>
